--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                             <button class="btn btn-outline-success" id="btn-prev-below"></button>
                                 <div class="col-sm">
                                     <div class="product-card first-group text-center">
-                                        <img  width="60%" height="120px" src="https://cdn.dsmcdn.com/mnresize/1200/1800/ty513/product/media/images/20220822/12/163815658/469101315/1/1_org_zoom.jpg" alt="product-image">
+                                        <img class="box-product" width="60%" height="120px" src="https://cdn.dsmcdn.com/mnresize/1200/1800/ty513/product/media/images/20220822/12/163815658/469101315/1/1_org_zoom.jpg" alt="product-image">
                                         <div class="product-body">
                                              <p><strong>Ostwint</strong> Mavi Stone Matte Saç Şekillendirici</p>
                                              <span class="hstack">
