--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                                 </div>
                                 <div class="col-sm">
                                     <div class="product-card first-group text-center">
-                                        <img  width="60%" height="120px" src="https://cdn.dsmcdn.com/mnresize/1200/1800/ty403/product/media/images/20220420/11/95140150/4073342/1/1_org_zoom.jpg" alt="product-image">
+                                        <img class="box-product" width="60%" height="120px" src="https://cdn.dsmcdn.com/mnresize/1200/1800/ty403/product/media/images/20220420/11/95140150/4073342/1/1_org_zoom.jpg" alt="product-image">
                                         <div class="product-body">
                                              <p><strong>David Beckham</strong> The Essence Erkek Edt 75 ml</p>
                                              <span class="hstack">
@@ -336,7 +336,7 @@
                                 </div>
                                 <div class="col-sm">
                                     <div class="product-card first-group text-center">
-                                        <img  width="60%" height="120px" src="https://cdn.dsmcdn.com/mnresize/1200/1800/ty2/product/media/images/20200423/9/128008/12905671/2/2_org_zoom.jpg" alt="product-image">
+                                        <img class="box-product" width="60%" height="120px" src="https://cdn.dsmcdn.com/mnresize/1200/1800/ty2/product/media/images/20200423/9/128008/12905671/2/2_org_zoom.jpg" alt="product-image">
                                         <div class="product-body">
                                              <p><strong>Sandisk</strong> Plus 240GB 530MB-440MB/s Sata 3 2.5" SSD</p>
                                              <span class="hstack">
@@ -350,7 +350,7 @@
                                 </div>
                                 <div class="col-sm">
                                     <div class="product-card first-group text-center">
-                                        <img  width="60%" height="120px" src="https://cdn.dsmcdn.com/mnresize/1200/1800/ty3/product/media/images/20200521/18/1587144/71621003/1/1_org_zoom.jpg" alt="product-image">
+                                        <img class="box-product" width="60%" height="120px" src="https://cdn.dsmcdn.com/mnresize/1200/1800/ty3/product/media/images/20200521/18/1587144/71621003/1/1_org_zoom.jpg" alt="product-image">
                                         <div class="product-body">
                                              <p><strong>Liggo</strong> Erkek Çocuk Sarı Reflex Kaleci Eldiveni</p>
                                              <span class="hstack">
@@ -364,7 +364,7 @@
                                 </div>
                                 <div class="col-sm">
                                     <div class="product-card first-group text-center">
-                                        <img  width="60%" height="120px" src="https://cdn.dsmcdn.com/mnresize/1200/1800/ty133/product/media/images/20210621/14/102691439/191144065/1/1_org_zoom.jpg" alt="product-image">
+                                        <img class="box-product" width="60%" height="120px" src="https://cdn.dsmcdn.com/mnresize/1200/1800/ty133/product/media/images/20210621/14/102691439/191144065/1/1_org_zoom.jpg" alt="product-image">
                                         <div class="product-body">
                                              <p><strong>Axe</strong> Ice Chill Edt 50 Ml + Deodorant 150 Ml Seti</p>
                                              <span class="hstack">
