--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                         <div class="row">
                             <!-- suggested products -->
                             <div class="col-sm-4">
-                                <a href="#" class="text-decoration-none"> <!--# yerine suggestedproducts.html'e gidecek-->
+                                <a href="elektronik-urunler.html" class="text-decoration-none"> <!--# yerine suggestedproducts.html'e gidecek-->
                                     <span class="img-container">
                                         <img class="zoom" src="https://cdn.dsmcdn.com/ty513/campaign/banners/original/601799/ee714537cf_0.jpg" alt="suggested-products">  
                                         <div class="text-white ps-3 bg-bottom">Önerilen Ürünler</div>
@@ -175,7 +175,7 @@
                             </div>
                             <!--products with a discount-->
                             <div class="col-sm-4">
-                                <a href="#" class="text-decoration-none"> <!--# yerine suggestedproducts.html'e gidecek-->
+                                <a href="erkek-giyim.html" class="text-decoration-none"> <!--# yerine suggestedproducts.html'e gidecek-->
                                     <span class="img-container">
                                         <img class="zoom" src="https://cdn.dsmcdn.com/ty514/pimWidgetApi/mobile_20220822151834_2258493AyakkabiCantaMobile202208221701kuponluurunlereylul.jpg" alt="suggested-products">  
                                         <div class="text-white ps-3 zoom bg-bottom">İndirimdeki Ürünler</div>
@@ -184,7 +184,7 @@
                             </div>
                             <!-- new season products -->
                             <div class="col-sm-4">
-                                <a href="#" class="text-decoration-none"> <!--# yerine suggestedproducts.html'e gidecek-->
+                                <a href="kadin-giyim.html" class="text-decoration-none"> <!--# yerine suggestedproducts.html'e gidecek-->
                                     <span class="img-container">
                                         <img class="zoom" src="https://cdn.dsmcdn.com/ty516/campaign/banners/original/612447/07c5ff00c8_0.jpg" alt="suggested-products">  
                                         <div class="text-white ps-3 zoom bg-bottom">Yeni Sezon Ürünleri</div>
@@ -277,14 +277,16 @@
                             <div class="col-sm-4">
                                 <a href="#" class="text-decoration-none"> <!--# yerine suggestedproducts.html'e gidecek-->
                                     <span class="img-container">
-                                        <img class="zoom" src="https://cdn.dsmcdn.com/ty511/pimWidgetApi/mobile_20220819064603_2244724AyakkabiCantaMobile202.jpg" alt="sport-products">  
+                                        <img class="zoom" src="https://cdn.dsmcdn.com/ty511/pimWidgetApi/mobile_20220819064603_2244724AyakkabiCantaMobile202.jpg" alt="sport-products"
+                                         title="Yakında sizlerle..."
+                                         >  
                                         <div class="text-white ps-3 zoom bg-bottom">Spor Ürünleri</div>
                                    </span>
                                 </a>
                             </div>
                             <!--Klasik Giyim-->
                             <div class="col-sm-4">
-                                <a href="#" class="text-decoration-none"> <!--# yerine suggestedproducts.html'e gidecek-->
+                                <a href="erkek-giyim.html" class="text-decoration-none"> <!--# yerine suggestedproducts.html'e gidecek-->
                                     <span class="img-container">
                                         <img class="zoom" src="https://cdn.dsmcdn.com/ty516/pimWidgetApi/mobile_20220826071043_2232794ErkekMobile202207191401.jpg" alt="classic-wearing-products">  
                                         <div class="text-white ps-3 zoom bg-bottom">Klasik Giyim</div>
@@ -293,7 +295,7 @@
                             </div>
                             <!--Teknolojik Ürünler-->
                             <div class="col-sm-4">
-                                <a href="#" class="text-decoration-none"> <!--# yerine suggestedproducts.html'e gidecek-->
+                                <a href="elektronik-urunler.html" class="text-decoration-none"> <!--# yerine suggestedproducts.html'e gidecek-->
                                     <span class="img-container">
                                         <img class="zoom" src="https://cdn.dsmcdn.com/ty499/pimWidgetApi/mobile_20220805054329_2249283ElektronikMobile202208041404.jpg" alt="technology-products">  
                                         <div class="text-white ps-3 zoom bg-bottom">Teknolojik Ürünler</div>
@@ -386,7 +388,9 @@
                             <div class="col-sm-4">
                                 <a href="#" class="text-decoration-none"> <!--# yerine suggestedproducts.html'e gidecek-->
                                     <span class="img-container">
-                                        <img class="zoom" src="https://cdn.dsmcdn.com/ty513/campaign/banners/original/612257/fcd6a9e44d_12.jpg" alt="suggested-products">  
+                                        <img class="zoom" src="https://cdn.dsmcdn.com/ty513/campaign/banners/original/612257/fcd6a9e44d_12.jpg" alt="suggested-products"
+                                         title="Yakında sizlerle..."
+                                        >  
                                         <div class="text-white ps-3 zoom bg-bottom">Mobilya Çeşitleri</div>
                                    </span>
                                 </a>
@@ -395,7 +399,9 @@
                             <div class="col-sm-4">
                                 <a href="#" class="text-decoration-none"> <!--# yerine suggestedproducts.html'e gidecek-->
                                     <span class="img-container">
-                                        <img class="zoom" src="https://cdn.dsmcdn.com/ty518/campaign/banners/original/595230/509995f4e2_0.jpg" alt="suggested-products">  
+                                        <img class="zoom" src="https://cdn.dsmcdn.com/ty518/campaign/banners/original/595230/509995f4e2_0.jpg" alt="suggested-products"
+                                         title="Yakında sizlerle..."
+                                        >  
                                         <div class="text-white ps-3 zoom bg-bottom">Ayakkabılar</div>
                                    </span>
                                 </a>
@@ -404,7 +410,9 @@
                             <div class="col-sm-4">
                                 <a href="#" class="text-decoration-none"> <!--# yerine suggestedproducts.html'e gidecek-->
                                     <span class="img-container">
-                                        <img class="zoom" src="https://cdn.dsmcdn.com/ty518/campaign/banners/original/612304/c2410c9b2f_0.jpg" alt="suggested-products">  
+                                        <img class="zoom" src="https://cdn.dsmcdn.com/ty518/campaign/banners/original/612304/c2410c9b2f_0.jpg" alt="suggested-products"
+                                         title="Yakında sizlerle..."
+                                        >  
                                         <div class="text-white ps-3 zoom bg-bottom">Okul Çantaları</div>
                                    </span>
                                 </a>
