--- a/hakkimizda.html
+++ b/hakkimizda.html
@@ -162,7 +162,7 @@
         </section>
     </main>
 
-    <footer>
+    <footer class="fixed-bottom">
         <nav class="bg-dark">
          <div class="container pt-3">
              <div class="row">
