--- a/about-us.html
+++ b/about-us.html
@@ -104,7 +104,7 @@
         </section>
     </main>
 
-    <footer>
+    <footer class="fixed-bottom">
         <nav class="bg-dark">
          <div class="container pt-3">
              <div class="row">
