commit for shopping-bag
shopping-bag file is updated.

--- a/shopping-bag.html
+++ b/shopping-bag.html
@@ -233,7 +233,7 @@
                         </div> -->
                     </ul>
                 </div>
-                <div class="col-12 col-xxl-3">
+                <div class="col-12 col-xxl-3 mb-4">
                     <div id="total-info">
                          <h1 class="lead">Sipariş Detayı</h1>
                          <hr>
