--- a/shopping-bag.html
+++ b/shopping-bag.html
@@ -62,6 +62,14 @@
             left: 750px;
             top:350px;
         }*/
+        
+        /*=> Do not show the footer especially for the devices like mobile phones to prevent collision between total price info
+        div and footer;*/
+        @media only screen and (max-width: 576px) {
+            #nav-footer {
+               display: none;
+            }
+        }
     </style>
 </head>
 
